# pd_vector

./: LICENSE  README.md  demo.py  pyproject.toml
src/pd_vector/: __init__.py  vector_accessor.py  vector_array_dtype.py
tests/: test_vector_accessor.py  test_vector_array.py
