[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pd-vector"
version = "0.1.0"
description = "A pandas extension package providing a native 3-D vector dtype."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pd_vector"]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.pytest.ini_options]
testpaths = ["tests"]